fix: mobile content

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: light)"
+      content="#0b486b"
+    />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: dark)"
+      content="#0b486b"
+    />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luis Aguilar - Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300&family=Roboto&family=Source+Code+Pro&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300&family=Roboto&family=Source+Code+Pro&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
