--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta
       name="theme-color"
       media="(prefers-color-scheme: light)"
-      content="#0b486b"
+      content="#08344d"
     />
     <meta
       name="theme-color"
       media="(prefers-color-scheme: dark)"
-      content="#0b486b"
+      content="#08344d"
     />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
